<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FF5722"
    android:backgroundTint="#FF5722">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/welcome_to_mybioapp"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textSize="65sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/continueButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="88dp"
        android:height="100dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/continueButton"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/exitButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:width="160sp"
        android:height="100dp"
        android:backgroundTint="#000000"
        android:fontFamily="@font/roboto_slab"
        android:gravity="center"
        android:text="@string/exit"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/continueButton"
        app:layout_constraintVertical_bias="0.357" />
</androidx.constraintlayout.widget.ConstraintLayout>